<resources>
    <string name="app_name">Submarine Control</string>
    <string name="connection_image">Connection</string>
    <string name="discover_button">Discover submarine</string>
    <string name="submarine_not_found">Did not found the submarine. Are you close enough?</string>
    <string name="cancel_connection">Cancel</string>
    <string name="home">Home</string>
    <string name="previous_dives">Previous dives</string>
    <string name="new_dive">Start new dive</string>
    <string name="advanced">Advanced</string>
    <string name="settings">Settings</string>
    <string name="not_connected">Not connected</string>
    <string name="submarine_logo">Submarine logo</string>
    <string name="submarine_title">Submarine</string>
    <string name="refresh">Refresh</string>
    <string name="disconnect">Disconnect</string>
    <string name="properties">Properties</string>
    <string name="submarine_data">Submarine data</string>
    <string name="submarine_data_icon">Submarine data icon</string>
    <string name="dive_data_overview_title">Last dive</string>
    <string name="submarine_status">Status</string>
    <string name="submarine_battery">Battery</string>
    <string name="submarine_temperature">Temperature</string>
    <string name="submarine_last_dive">Last dive</string>
    <string name="last_dive_depth">Depth</string>
    <string name="last_dive_date">Date</string>
    <string name="full_report">See full report</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="new_dive_offset1">In</string>
    <string name="new_dive_offset2">seconds</string>
    <string name="new_dive_depth">meters</string>
    <string name="start_dive">Start dive</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="how_deep">How deep?</string>
    <string name="dive_scheduled">Dive scheduled</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="no_dive">No dive yet</string>
    <string name="zerometers">0 meters</string>
    <string name="meters"> m</string>
    <string name="degc">°C</string>
    <string name="percent">%</string>
    <string name="default_temp">-°C</string>
    <string name="diving">Diving</string>
    <string name="get_dive_data">Get dive data</string>
    <string name="done">Done</string>
    <string name="submarine">Submarine</string>
    <string name="cloud">Cloud</string>
    <string name="default_submarine_name">USS Sea Tiger</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="default_depth">0 m</string>
    <string name="temperature">°C</string>
    <string name="dive_done">Dive done, get data</string>
    <string name="depth">Depth</string>
</resources>
