<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="6dp"
        android:layout_margin="6dp">

        <ImageView
            android:src="@drawable/ic_wifi_tethering_black_24dp"
            android:contentDescription="@string/submarine_data_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submarine_status"
            android:layout_marginStart="16dp"
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:id="@+id/submarine_status" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="6dp"
        android:layout_margin="6dp">

        <ImageView
            android:src="@drawable/ic_battery_std_black_24dp"
            android:contentDescription="@string/submarine_data_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submarine_battery"
            android:layout_marginStart="16dp"
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:id="@+id/submarine_battery" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="6dp"
        android:layout_margin="6dp">

        <ImageView
            android:src="@drawable/ic_history_black_24dp"
            android:contentDescription="@string/submarine_data_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submarine_last_dive"
            android:layout_marginStart="16dp"
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:id="@+id/submarine_last_dive" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="6dp"
        android:layout_margin="6dp">

        <ImageView
            android:src="@drawable/ic_wb_sunny_black_24dp"
            android:contentDescription="@string/submarine_data_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submarine_temperature"
            android:layout_marginStart="16dp"
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:id="@+id/submarine_temperature" />
    </LinearLayout>

</LinearLayout>