<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cvoltidioten.submarinecontrol.DiveActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/cloud"
        android:contentDescription="@string/cloud"
        android:src="@drawable/clouds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|right"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp" />

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp">

        <View
            android:id="@+id/water"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/sea_blue"
            android:layout_marginTop="21dp" />

        <ImageView
            android:id="@+id/submarine_outline"
            android:contentDescription="@string/submarine"
            android:src="@drawable/submarine_outline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/data_progress_bar"
            android:layout_gravity="center_horizontal"
            android:indeterminate="true"
            android:visibility="invisible"
            android:layout_alignTop="@+id/data_button"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/data_button"
            android:text="@string/dive_done"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="60dp"
            android:onClick="getData" />
    </RelativeLayout>

</LinearLayout>