<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:id="@+id/linearLayout3"
        android:layout_marginBottom="6dp"
        android:weightSum="1">

        <ImageView
            android:contentDescription="@string/new_dive_depth"
            android:src="@drawable/ic_access_time_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/new_dive_when_image"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="44dp"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/new_dive_offset1"
            android:layout_gravity="center"
            android:layout_marginLeft="14dp"
            android:layout_weight="0.07" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="2"
            android:id="@+id/new_dive_offset" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/new_dive_offset2"
            android:layout_gravity="center"
            android:layout_marginLeft="14dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_below="@+id/linearLayout3">

        <ImageView
            android:contentDescription="@string/new_dive_depth"
            android:src="@drawable/ic_arrow_drop_down_circle_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/new_dive_depth_image"
            android:layout_gravity="center" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="2"
            android:id="@+id/new_dive_depth"
            android:layout_marginLeft="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/new_dive_depth"
            android:layout_gravity="center"
            android:layout_marginLeft="14dp" />
    </LinearLayout>
</RelativeLayout>