<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cvoltidioten.submarinecontrol.DataActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- The main content view -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/background_grey">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/graph_card"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    card_view:cardUseCompatPadding="true"
                    card_view:cardBackgroundColor="@color/card_white"
                    card_view:cardCornerRadius="4dp"
                    card_view:cardElevation="4dp" >

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/data_chart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_alignParentStart="true"
                        android:layout_above="@+id/discard_button"
                        android:layout_margin="20dp" />

                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/graph_card"
                    android:layout_centerHorizontal="true">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <android.support.v7.widget.CardView
                            xmlns:card_view="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/min_temp_card"
                            android:layout_gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            card_view:cardUseCompatPadding="true"
                            card_view:cardBackgroundColor="@color/card_white"
                            card_view:cardCornerRadius="4dp"
                            card_view:cardElevation="4dp" >

                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                                <ImageView
                                    android:contentDescription="@string/temperature"
                                    android:src="@drawable/ic_wb_sunny_black_24dp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginStart="20dp" />

                                <TextView
                                    android:id="@+id/min_temperature"
                                    android:text="@string/default_temp"
                                    android:padding="20dp"
                                    android:textAppearance="?android:attr/textAppearanceMedium"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" />

                            </LinearLayout>

                        </android.support.v7.widget.CardView>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <android.support.v7.widget.CardView
                            xmlns:card_view="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/max_depth_card"
                            android:layout_gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            card_view:cardUseCompatPadding="true"
                            card_view:cardBackgroundColor="@color/card_white"
                            card_view:cardCornerRadius="4dp"
                            card_view:cardElevation="4dp" >

                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                                <ImageView
                                    android:contentDescription="@string/depth"
                                    android:src="@drawable/ic_arrow_drop_down_circle_black_24dp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginStart="20dp" />

                                <TextView
                                    android:id="@+id/max_depth"
                                    android:text="@string/default_depth"
                                    android:padding="20dp"
                                    android:textAppearance="?android:attr/textAppearanceMedium"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" />

                            </LinearLayout>

                        </android.support.v7.widget.CardView>

                    </RelativeLayout>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/discard"
                    android:id="@+id/discard_button"
                    android:onClick="discard"
                    android:layout_margin="16dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:id="@+id/save_button"
                    android:onClick="save"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="16dp" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>